--- a/application.properties
+++ b/application.properties
@@ -1,13 +1,5 @@
-#Master
-spring.application.name=EmployeeService
-server.port=8081
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/AUTH?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql:true
-spring.jpa.properties.hibernate.format_sql=true
-spring.main.allow-circular-references=true
+spring.application.name=config-server
+server.port=8085
+
 
 
